Alignment issue fix

--- a/src/components/classifieds-category-select/classifieds-category-select.scss
+++ b/src/components/classifieds-category-select/classifieds-category-select.scss
@@ -1,6 +1,7 @@
 .classifieds-category-select-wrapper {
   .category-cont {
     margin: 30px 0 0 !important;
+    display: flex;
     .category-list {
       box-shadow: $shadow-small;
       font-weight: 700;
@@ -18,6 +19,7 @@
       color: rgba($black, 0.8);
       padding: 30px 0;
       font-size: 1.1rem;
+      width: 100%;
       &:hover {
         color: $purple;
         box-shadow: $shadow-purple;
@@ -37,7 +39,7 @@
       margin: 20px 0 0 !important;
       .category-list {
         padding: 20px;
-        font-size: 0.9rem;
+        font-size: 1rem;
         img {
           max-height: 30px;
         }
